<resources>
    <string name="app_name">Rockloud</string>

    <string name="welcome_msg">Welcome to Rockloud</string>

    <!-- These strings are mainly used in "activity_main.xml" file -->
    <string name="allsongs">All Songs</string>
    <string name="total_allsongs">17 nusics</string>
    <string name="artists">Artists</string>
    <string name="total_artists">10 artists</string>
    <string name="albums">Albums</string>
    <string name="total_albums">7 albums</string>
    <string name="folders">Folders</string>
    <string name="total_folders">4 folders</string>
    <string name="playlists">Playlists</string>
    <string name="total_playlists">2 lists</string>
    <string name="scanmedia">Scan Media</string>
    <string name="equalizer">Equalizer</string>
    <string name="sleep">Sleep</string>
    <string name="settings">Settings</string>
    <string name="nowplaying">Now Playing</string>

    <!-- These strings are mainly used in "activity_allsongs.xml" file -->
    <string name="shuffle">Shuffle</string>
    <string name="song1title">Shot me down</string>
    <string name="song1singer">Nancy Sinatra</string>
    <string name="song2title">One love</string>
    <string name="song2singer">Bob Marley</string>
    <string name="song3title">I got Love</string>
    <string name="song3singer">Nate Dogg</string>
    <string name="song4title">You ready?</string>
    <string name="song4singer">Knoc-turn\'al</string>

    <!-- These strings are mainly used in "activity_artists.xml" file -->
    <string name="singer1">Bob Marley</string>
    <string name="singer1songs">3 musics</string>
    <string name="singer2">Knoc-turn\'al</string>
    <string name="singer2songs">4 musics</string>

    <!-- These strings are mainly used in "activity_albums.xml" file -->
    <string name="album1">Exodus</string>
    <string name="album1songs">3 musics</string>
    <string name="album2">Bang Bang</string>
    <string name="album2songs">5 musics</string>
    <string name="album3">Music &amp; Me</string>
    <string name="album3songs">4 musics</string>

    <!-- These strings are mainly used in "activity_folders.xml" file -->
    <string name="folder_name">Download</string>
    <string name="folder_songs">17 musics</string>
    <string name="folder_location">/storage/emulated/0/Download</string>

    <!-- These strings are mainly used in "activity_playlists.xml" file -->
    <string name="pl_recentplaytitle">Recent Play</string>
    <string name="pl_recentplaymusics">3 musics</string>
    <string name="pl_recentlyaddedtitle">Recently Added</string>
    <string name="pl_recentlyaddedmusics">1 musics</string>
    <string name="pl_myfavtitle">My Favourite</string>
    <string name="pl_myfavmusics">0 musics</string>
    <string name="pl_defaulylisttitle">Default list</string>
    <string name="pl_defaulylistmusics">0 musics</string>
    <string name="pl_playlists">Playlists(1)</string>
    <string name="pl_createnewpl">+ Create a new playlist</string>

    <!-- These strings are for Activity Intro/Info and will be used for each Activity -->
    <!-- aim stands for "Activity Intro Message" -->
    <string name="aim_splash">This is Splash/Welcome Activity</string>
    <string name="aim_main">This is Home Screen of the App \n Please click Icons to see detailed info</string>
    <string name="aim_allsongs">Activity displays list of all Songs</string>
    <string name="aim_artists">Activity displays list of all Artists</string>
    <string name="aim_albums">Activity displays list of all Albums</string>
    <string name="aim_folders">Activity displays list of all source Folders</string>
    <string name="aim_playlists">Activity displays list of all Playlists</string>
    <string name="aim_scanmedia">Activity displays option to Scan all songs</string>
    <string name="aim_equalizer">Activity displays option for Audio Settings </string>
    <string name="aim_sleep">Activity displays option to set Sleep Timer</string>
    <string name="aim_settings">Activity displays general Settings</string>
    <string name="aim_nowplaying">Activity displays currently playing Song</string>

</resources>
